# priceofme

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: launch-posts.md
engine/: calculator.py  data.py
tests/: test_calculator.py
web/app/: engine.ts  globals.css  layout.tsx  page.tsx
